# CitaYa

./: README.md  example.py  pyproject.toml  requirements.txt
citaya/: __init__.py  booking.py  browser.py  captcha.py  models.py  notify.py  sms.py
tests/: conftest.py  test_booking.py  test_capsolver.py  test_captcha.py  test_customer_profile.py  test_date_selection.py  test_office_selection.py  test_response_parsing.py  test_retry_logic.py  test_sms_webhook.py  test_url_building.py
