[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citaya"
version = "0.1.0"
description = "Automated appointment booking for Spanish extranjería (cita previa)"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/zaidazmi/citaya"

[tool.setuptools.packages.find]
include = ["citaya*"]

[tool.setuptools.package-data]
citaya = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
